# aws-efa-examples

./: CMakeLists.txt  Dockerfile  Makefile  README.md
cmake/: packages.cmake
examples/: CMakeLists.txt
examples/coro/: CMakeLists.txt  coro.cc
examples/coro/include/common/: coro.h  handle.h  io.h  timer.h  utils.h
examples/efa/: run.sh
examples/efa/include/common/: efa.h  selector.h
examples/gpuloc/: CMakeLists.txt
examples/gpuloc/include/common/: gpuloc.h
examples/lsefa/: CMakeLists.txt  README.md  lsefa.cc
examples/nvml/: nvml.cc
examples/nvml/include/common/: gpuloc.h
examples/pingpong/: CMakeLists.txt  net.cc  pingpong.cc  run.sh  utils.cc  utils.h
examples/pingpong/include/common/: buffer.h  conn.h  coro.h  efa.h  event.h  future.h  handle.h  io.h  mpi.h  net.h  result.h  runner.h  selector.h  task.h  timer.h  utils.h
src/: CMakeLists.txt
src/affinity/: CMakeLists.txt  README.md  main.cc  run.sh
src/affinity/include/common/: conn.h  net.h  result.h  taskset.h  timer.h
src/batch/: CMakeLists.txt  main.cc  run.sh
src/batch/include/common/: conn.h  utils.h
src/benchmark/: CMakeLists.txt  main.cc  run.sh
src/benchmark/include/common/: conn.h  gpuloc.h  progress.h
src/coro/: main.cc
src/coro/include/common/: io.h
src/dmabuf/: CMakeLists.txt  README.md  dmabuf.cc  main.cc  net.cc  run.sh
src/dmabuf/include/common/: buffer.h  conn.h  gpuloc.h  io.h  net.h  runner.h  selector.h  utils.h
src/efa/: CMakeLists.txt  efa.cc  handle.cc  main.cc  run.sh
src/efa/include/common/: buffer.h  conn.h  coro.h  future.h
src/gpuloc/: gpuloc.cc  main.cc
src/gpuloc/include/common/: gpuloc.h  utils.h
src/info/: CMakeLists.txt  main.cc
src/nvml/: CMakeLists.txt  main.cc
